# sillyMotivation

./: .gitignore  README.md
.github/workflows/: ci.yml  release.yml
ios/: project.yml
ios/App/: ContentView.swift  CounterView.swift  Info.plist  SettingsView.swift  SillyMotivationApp.swift  Theme.swift
ios/Shared/: EarningsEngine.swift  Fortunes.swift  MoneyFormat.swift  SharedSettings.swift
ios/Widget/: HomeWidgets.swift  Info.plist  LockWidgets.swift  Provider.swift  SillyWidget.entitlements  SillyWidgetBundle.swift  WidgetTheme.swift
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray_text.rs
ui/: index.html  main.js  styles.css
