[package]
name = "silly-motivation"
version = "1.0.0"
description = "A silly little menu bar app that shows your salary ticking up in real time"
authors = ["Harshpreet Singh"]
edition = "2021"

[lib]
name = "silly_motivation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
# Raw AppKit access: window level + collection behavior so the popover can
# appear over fullscreen apps (same version Tauri already pulls in).
objc2 = "0.6"

[target.'cfg(not(target_os = "macos"))'.dependencies]
# Windows/Linux trays can't show text next to the icon, so we rasterize the
# counter into the icon image itself.
ab_glyph = "0.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
